rework error